--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,6 @@ repo: upptime # The name of this repository
 sites:
   - name: Mail Server
     url: https://mail.fampopprol.me
-  - name: Mailcow Backup Server
-    url: https://mailbak.fampopprol.me
   - name: Counter Database
     url: https://ledschendlich-pb.fampopprol.me
     expectedStatusCodes:
@@ -20,6 +18,10 @@ sites:
     url: https://letschendlich.website
   - name: Bitwarden
     url: https://bitwarden.fampopprol.me
+    expectedStatusCodes:
+     - 200
+     - 201
+     - 403
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
