--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -22,6 +22,8 @@ sites:
      - 200
      - 201
      - 403
+  - name: UptimeKuma
+    url: https://uptime1.fampopprol.me
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
